@@ -4,7 +4,8 @@ use strict;
 use warnings;
 use parent 'HTML::FormWidgets';
 
-__PACKAGE__->mk_accessors( qw( button_name config field href subtype title ) );
+__PACKAGE__->mk_accessors( qw( button_name config field
+                               href label subtype title value ) );
 
 my $_stringify = sub {
    my $hash = shift;
@@ -18,11 +19,12 @@ sub init {
    $self->button_name( '_method' );
    $self->class      ( 'chooser_button fade submit' );
    $self->config     ( { height => 500, width => 500, x => 10, y => 10 } );
-   $self->default    ( $self->loc( 'Choose' ) );
    $self->field      ( q() );
    $self->href       ( undef );
+   $self->label      ( $self->loc( 'Choose' ) );
    $self->subtype    ( 'window' );
    $self->title      ( $self->loc( 'Select Item' ) );
+   $self->value      ( lc $self->label );
    return;
 }
 
@@ -42,7 +44,7 @@ sub render_field {
 
    $config->{ $_ } = "'".($self->$_)."'" for (qw( field subtype ));
 
-   $config->{button} = "'".$self->default."'";
+   $config->{button} = "'".$self->value."'";
    $config->{title } = "'".$self->title."'";
 
    my $js = { args   => "[ '".$self->href."', ".$_stringify->( $config )." ]",
@@ -53,7 +55,7 @@ sub render_field {
    return $hacc->button( { class => $self->class,
                            id    => $self->id,
                            name  => $self->button_name,
-                           value => $self->default, }, $self->default );
+                           value => $self->value, }, $self->label );
 }
 
 1;
